fix text overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -1044,7 +1044,7 @@ section{
     width: 100%;
     max-width: 650px;
     margin: 0 auto;
-    height: 72px;
+    height: auto;
     background: $fadedBlue;
     position: relative;
     border: none;
@@ -1053,7 +1053,6 @@ section{
         position: relative;
         h4, p{
             text-overflow: ellipsis;
-            overflow: hidden;
             white-space: nowrap;
         }
     }
@@ -1081,9 +1080,8 @@ section{
         opacity: 0.6;
         margin: 0px;
         padding-left: 24px;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        padding-right: 24px;
+        padding-bottom: 16px;
         @media screen and (max-width: $smallWidth){
             padding-left: 16px;
         }
